<resources>
    <string name="app_name">切肤知痛</string>

    <!-- Strings related to login -->
    <string name="logo_content_description">这是应用程序图标</string>
    <string name="phone_content_description">手机号</string>
    <string name="new_phone_content_description">新手机号</string>
    <string name="verification_code_content_description">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to main -->
    <string name="title_activity_main">切肤知痛</string>
    <string name="sample_user_name">添颜</string>
    <string name="wiki">百科</string>
    <string name="read">阅读</string>
    <string name="question">问题</string>
    <string name="diagnose">诊断</string>
    <string name="assist">辅助</string>
    <string name="questionaire">问卷</string>
    <string name="result">结果</string>
    <string name="treat">治疗</string>
    <string name="monitor">监控</string>
    <string name="picture">开始识别</string>
    <string name="add_to_monitor">添加至监控列表</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="suggestion">建议</string>
    <string name="add_monitor">添加监控</string>
    <string name="monitor_name">监控名称</string>
    <string name="monitor_description">监控描述</string>
    <string name="monitor_detail">监控详情</string>
    <string name="update_monitor">更新监控</string>
    <string name="monitor_status">监控状态</string>
    <string name="delete_monitor">删除监控</string>
    <string name="username">用户名</string>
    <string name="logout">注销登录</string>
    <string name="update_username">更新用户名</string>
    <string name="update_phone_number">更新手机号</string>
    <string name="request_permission">permission required</string>
    <string name="camera_error">camera error</string>
    <string name="intro_message">intro message</string>

    <string name="setting">设置</string>
    <string name="title_activity_monitor">monitor</string>
    <string name="title_activity_add_monitor">AddMonitorActivity</string>
    <string name="title_activity_monitor_detail">MonitorDetailActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="submit">提交</string>
    <string name="title_activity_monitor_update_acitivity">MonitorUpdateAcitivity</string>
</resources>
