<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gxy.intel.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_content_description"
            app:srcCompat="@drawable/ic_skin" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#6495ED"
            android:textSize="16sp"
            android:text="@string/app_name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_phone_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/phone_content_description"
                app:srcCompat="@drawable/ic_phone"/>

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:hint="@string/phone_content_description"
                android:background="#F8F8F8"
                android:inputType="phone" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/ic_phone_background">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/verification_code_content_description"
                    app:srcCompat="@drawable/ic_verification_code"/>

                <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="#F8F8F8"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:hint="@string/verification_code_content_description"
                    android:inputType="text" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_verification_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_send_verification_code"
                android:text="@string/get_verification_code"
                android:textSize="14sp"
                android:textColor="#FEFEFE"
                android:onClick="get_verification_code"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
        <Button
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_login"
            android:text="@string/login"
            android:textSize="22sp"
            android:textColor="#FEFEFE"
            android:onClick="login"
            style="?android:attr/borderlessButtonStyle" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_wechat"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="#2DC100"
                android:text="@string/wechat_login"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
