<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gxy.intel.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/diagnose"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/diagnose"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/assist"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/assist"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/result"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/result"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/treat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/treat"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/diagnose_img"
            android:layout_height="4dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="#FFFF8C" />
        <ImageView
            android:id="@+id/assist_img"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/result_img"
            android:layout_height="4dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/treat_img"
            android:layout_height="4dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
</LinearLayout>