<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gxy.intel.SettingActivity"
    tools:showIn="@layout/app_bar_setting">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/setting"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/setting"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_phone_background">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_content_description"
            app:srcCompat="@drawable/ic_user_setting"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:hint="@string/username"
            android:background="#F8F8F8"
            android:inputType="text" />
    </LinearLayout>
    <Button
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_login"
        android:textColor="#FFFFFF"
        android:text="@string/update_username"
        android:onClick="updateUserName"
        style="?android:attr/borderlessButtonStyle"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_phone_background">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_content_description"
            app:srcCompat="@drawable/ic_phone"/>

        <EditText
            android:id="@+id/et_old_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:hint="@string/phone_content_description"
            android:background="#F8F8F8"
            android:inputType="phone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/ic_phone_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/verification_code_content_description"
                app:srcCompat="@drawable/ic_verification_code"/>

            <EditText
                android:id="@+id/et_old_verification_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="#F8F8F8"
                android:textSize="14sp"
                android:layout_weight="1"
                android:hint="@string/verification_code_content_description"
                android:inputType="text" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_old_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_send_verification_code"
            android:text="@string/get_verification_code"
            android:onClick="get_old_verification_code"
            android:textSize="14sp"
            android:textColor="#FEFEFE"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_phone_background">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/phone_content_description"
            app:srcCompat="@drawable/ic_phone"/>

        <EditText
            android:id="@+id/et_new_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:hint="@string/new_phone_content_description"
            android:background="#F8F8F8"
            android:inputType="phone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/ic_phone_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/verification_code_content_description"
                app:srcCompat="@drawable/ic_verification_code"/>

            <EditText
                android:id="@+id/et_new_verification_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="#F8F8F8"
                android:textSize="14sp"
                android:layout_weight="1"
                android:hint="@string/verification_code_content_description"
                android:inputType="text" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_new_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_send_verification_code"
            android:text="@string/get_verification_code"
            android:onClick="get_new_verification_code"
            android:textSize="14sp"
            android:textColor="#FEFEFE"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
    <Button
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_login"
        android:textColor="#FFFFFF"
        android:onClick="updatePhoneNumber"
        android:text="@string/update_phone_number"
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_send_verification_code"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:text="@string/logout"
        android:onClick="logout"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>