<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gxy.intel.AddMonitorActivity"
    tools:showIn="@layout/app_bar_add_monitor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/monitor"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/add_monitor"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/monitor_name"/>
        <EditText
            android:id="@+id/et_monitor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/monitor_description"/>
        <EditText
            android:id="@+id/et_monitor_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_login"
        android:textSize="20sp"
        android:onClick="add_monitor"
        android:textColor="#FFFFFF"
        android:text="@string/add_monitor"/>
</LinearLayout>